--- a/app/views/cats/quiz.html.erb
+++ b/app/views/cats/quiz.html.erb
@@ -1,15 +1,31 @@
 <%= form_tag("/cats", method: "get") do %>
+<% counter = 0 %>
   <% @quiz.questions.each_with_index do |question, index| %>
     <div>
       <%= label_tag("q#{index}", question[:question]) %>
     </div>
     <div>
-      <%= radio_button_tag("q#{index}", "yes") %>
+      <%= radio_button_tag("q#{index}", "yes", checked="checked") %>
       <%= label_tag("q#{index}_yes", "Yes") %>
       <%= radio_button_tag("q#{index}", "no") %>
       <%= label_tag("q#{index}_no", "No") %>
-    </div>
-  <% end %>
+      <% counter = counter + 1 %>
+      </div>
+    <% end %>
+<div>
+  Is your ideal cat
+  <%= check_box_tag("q#{counter}", "baby", checked="checked") %>
+  <%= label_tag("q#{counter}_yes", "baby") %>
+  <% counter = counter + 1 %>
+  <%= check_box_tag("q#{counter}", "young", checked="checked") %>
+  <%= label_tag("q#{counter}_yes", "young") %>
+  <% counter = counter + 1 %>
+  <%= check_box_tag("q#{counter}", "adult", checked="checked") %>
+  <%= label_tag("q#{counter}_yes", "adult") %>
+  <% counter = counter + 1 %>
+  <%= check_box_tag("q#{counter}", "senior", checked="checked") %>
+  <%= label_tag("q#{counter}_yes", "senior") %>
+  </div>
   <div>
     <%= submit_tag("Find Cats") %>
   </div>
